[package]
name = "pusoy_dos2"
description = "pusoy dos lib"
license = "MIT"
version = "0.1.2"
authors = ["Ben Brunton <benbrunton@hotmail.com>"]
edition = "2018"

[dependencies]
nanoid = "0.1.3"
wasm-bindgen = "0.2"
serde = "1.0.87"
serde_derive = "1.0.87"

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]
