[package]
name = "pusoy_dos2"
description = "pusoy dos lib"
license = "MIT"
version = "0.15.0"
authors = ["Ben Brunton <benbrunton@hotmail.com>"]
edition = "2018"

[dependencies]
nanoid = "0.1.3"
wasm-bindgen = "0.2"
serde = { version = "1.0.87", features = ["derive"] }

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]
